完成验证码

--- a/seckill/src/main/resources/static/goods_detail.htm
+++ b/seckill/src/main/resources/static/goods_detail.htm
@@ -43,12 +43,18 @@
                 <span id="miaoshaTip"></span>
             </td>
             <td>
-                <form id="miaoshaForm">
-                    <!--<button class="btn btn-primary btn-block" type="submit" id="buyButton">立即秒杀</button>-->
-                    <button class="btn btn-primary btn-block" type="button" id="buyButton" onclick="doMiaosha()">立即秒杀
-                    </button>
+                <div class="row">
+                    <div id="miaoshaForm" class="form-inline">
+                        <img id="verifyCodeImg" width="80" height="32" style="display: none" onclick="refreshVerifyCode()"/>
+                        <input id="verifyCode" class="form-control" style="display: none"/>
+                        <!--<button class="btn btn-primary btn-block" type="submit" id="buyButton">立即秒杀</button>-->
+                        <!--<button class="btn btn-primary btn-block" type="button" id="buyButton" onclick="doMiaosha()">立即秒杀-->
+                        <button class="btn btn-primary" type="button" id="buyButton" onclick="getMiaoshaPath()">立即秒杀
+                        </button>
+                    </div>
                     <input type="hidden" name="goodsId" id="goodsId"/>
-                </form>
+
+                </div>
             </td>
         </tr>
         <tr>
@@ -72,6 +78,36 @@
         getDetail();
     });
 
+    function refreshVerifyCode() {
+        $("#verifyCodeImg").attr("src", "/miaosha/verifyCode?goodsId=" + $("#goodsId").val() + "&timestamp=" + new Date().getTime())
+
+    }
+
+    function getMiaoshaPath() {
+        var goodsId = $("#goodsId").val();
+        g_showLoading();
+        $.ajax({
+            url: "/miaosha/path",
+            type: "GET",
+            data: {
+                goodsId: goodsId,
+                verifyCode: $("#verifyCode").val()
+            },
+            success: function (data) {
+
+                if (data.code == 0) {
+                    var path = data.data
+                    doMiaosha(path)
+
+                } else {
+                    layer.msg(data.msg)
+                }
+            },
+            error: function () {
+                layer.msg("客户端请求有误")
+            }
+        })
+    }
 
     function getMiaoshaResult(goodsId) {
         g_showLoading();
@@ -112,9 +148,9 @@
         })
     }
 
-    function doMiaosha() {
+    function doMiaosha(path) {
         $.ajax({
-            url: "/miaosha/do_miaosha",
+            url: "/miaosha/" + path + "/do_miaosha",
             type: "POST",
             data: {
                 goodsId: $("#goodsId").val()
@@ -190,9 +226,15 @@
                 clearTimeout(timeout);
             }
             $("#miaoshaTip").html("秒杀进行中");
+
+            $("#verifyCodeImg").attr("src", "/miaosha/verifyCode?goodsId=" + $("#goodsId").val())
+            $("#verifyCodeImg").show()
+            $("#verifyCode").show()
         } else {//秒杀已经结束
             $("#buyButton").attr("disabled", true);
             $("#miaoshaTip").html("秒杀已经结束");
+            $("#verifyCodeImg").hide()
+            $("#verifyCode").hide()
         }
     }
 
